--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^130.0.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "puppeteer": "^23.7.1",
+    "puppeteer-core": "^23.7.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
