--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sparticuz/chromium": "^130.0.0",
+    "@sparticuz/chromium-min": "^130.0.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "puppeteer": "^23.7.1",
