--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@sparticuz/chromium": "^130.0.0",
-    "@sparticuz/chromium-min": "^119.0.2",
-    "puppeteer-core": "^21.6.1",
+    "@sparticuz/chromium-min": "121.0.0",
+    "puppeteer-core": "^21.9.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "puppeteer": "^23.7.1",
