--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^130.0.0",
-    "@sparticuz/chromium-min": "121.0.0",
-    "puppeteer-core": "^21.9.0",
-    "lucide-react": "^0.456.0",
     "next": "15.0.3",
-    "puppeteer-core": "^21.0.0",      
-    "@sparticuz/chromium-min": "^110.0.5481.100",  
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+
+    
+    "puppeteer-core": "^21.9.0",
+    "@sparticuz/chromium-min": "^121.0.0",
+
+    "lucide-react": "^0.456.0"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
